--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,4 +2,14 @@
 <resources>
 
     <style name="Theme.Android14Features" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="TextViewBold" parent="@android:style/Widget.TextView">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:letterSpacing">0</item>
+        <item name="android:lineSpacingExtra">5dp</item>
+    </style>
 </resources>
